Created styles for button and select

--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
 <head>
     <title>Гороскоп</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="./styles/main.css" />
 </head>
 <body>
-
+    <main>
+        
+    </main>
+    <!--
+    <div class="select">
+        <select>
+            <option>Choose an option...</option>
+            <option>Select 1</option>
+            <option>Select 2</option>
+        </select>
+        <i class="select-icon"></i>
+    </div>
+    <button class="next-button">Далее</button>
+    -->
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
