Created progress bar

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
                             </li>
                         </ul>
                     </fieldset>
+                    <fieldset>
+                        <legend>Test</legend>
+                    </fieldset>
+                    <fieldset>
+                        <legend>Test</legend>
+                    </fieldset>
+
                     <button class="next-button submit" type="button">Далее</button>
                 </form>
             </section>
@@ -56,6 +63,17 @@
             <span>2022 @ horoscope personal</span>
         </footer>
     </main>
+    <!--
+    <div class="select">
+        <select>
+            <option>Choose an option...</option>
+            <option>Select 1</option>
+            <option>Select 2</option>
+        </select>
+        <i class="select-icon"></i>
+    </div>
+    <button class="next-button">Далее</button>
+    -->
     <script src="./scripts/index.js"></script>
 </body>
 </html>
