Created second page

--- a/index.html
+++ b/index.html
@@ -49,10 +49,36 @@
                         </ul>
                     </fieldset>
                     <fieldset>
-                        <legend>Test</legend>
+                        <legend>В какое время суток вы чувствуете себя наиболее комфортно?</legend>
+                        <ul>
+                            <li>
+                                <label>
+                                    <input type="radio" name="day" />
+                                    Утро
+                                </label>
+                            </li>
+                            <li>
+                                <label>
+                                    <input type="radio" name="day" />
+                                    День
+                                </label>
+                            </li>
+                            <li>
+                                <label>
+                                    <input type="radio" name="day" />
+                                    Вечер
+                                </label>
+                            </li>
+                            <li>
+                                <label>
+                                    <input type="radio" name="day" />
+                                    Ночь
+                                </label>
+                            </li>
+                        </ul>
                     </fieldset>
                     <fieldset>
-                        <legend>Test</legend>
+                        <legend>Test 2</legend>
                     </fieldset>
 
                     <button class="next-button submit" type="button">Далее</button>
