Created third page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,27 @@
                         </ul>
                     </fieldset>
                     <fieldset>
-                        <legend>Test 2</legend>
+                        <legend>Подскажите, мучает ли вас бессонница последнее время?</legend>
+                        <ul>
+                            <li>
+                                <label>
+                                    <input type="radio" name="insomnia" />
+                                    Да
+                                </label>
+                            </li>
+                            <li>
+                                <label>
+                                    <input type="radio" name="insomnia" />
+                                    Нет
+                                </label>
+                            </li>
+                            <li>
+                                <label>
+                                    <input type="radio" name="insomnia" />
+                                    Иногда
+                                </label>
+                            </li>
+                        </ul>
                     </fieldset>
 
                     <button class="next-button submit" type="button">Далее</button>
