--- a/index.html
+++ b/index.html
@@ -36,42 +36,66 @@
                         <ul>
                             <li>
                                 <label>
-                                    <input type="radio" name="sex" />
+                                    <input type="radio" name="sex" value="0" />
                                     Женщина
                                 </label>
                             </li>
                             <li>
                                 <label>
-                                    <input type="radio" name="sex" />
+                                    <input type="radio" name="sex" value="1" />
                                     Мужчина
                                 </label>
                             </li>
                         </ul>
+                    </fieldset>
+                    <fieldset class="select">
+                        <legend>Введите дату своего рождения:</legend>
+                        <ul>
+                            <li>
+                                <select class="days" name="day"></select>
+                                <i class="select-icon"></i>
+                            </li>
+                            <li>
+                                <select class="month" name="month"></select>
+                                <i class="select-icon"></i>
+                            </li>
+                            <li>
+                                <select class="years" name="year"></select>
+                                <i class="select-icon"></i>
+                            </li>
+                        </ul>
+                        <div class="zodiac-icon">
+                            <figure>
+                                <img src="./images/zodiac/" alt="" />
+                                <figcaption>Зодиак</figcaption>
+                            </figure>
+                        </div>
+                        <span class="error">Пожалуйста, выберите ответ</span>
                     </fieldset>
                     <fieldset>
                         <legend>В какое время суток вы чувствуете себя наиболее комфортно?</legend>
                         <ul>
                             <li>
                                 <label>
-                                    <input type="radio" name="day" />
+                                    <input type="radio" name="day" value="0" />
                                     Утро
                                 </label>
                             </li>
                             <li>
                                 <label>
-                                    <input type="radio" name="day" />
+                                    <input type="radio" name="day" value="1" />
                                     День
                                 </label>
                             </li>
                             <li>
                                 <label>
-                                    <input type="radio" name="day" />
+                                    <input type="radio" name="day" value="2" />
                                     Вечер
                                 </label>
                             </li>
                             <li>
                                 <label>
-                                    <input type="radio" name="day" />
+                                    <input type="radio" name="day" value="3" />
                                     Ночь
                                 </label>
                             </li>
@@ -82,25 +106,86 @@
                         <ul>
                             <li>
                                 <label>
-                                    <input type="radio" name="insomnia" />
+                                    <input type="radio" name="insomnia" value="0" />
                                     Да
                                 </label>
                             </li>
                             <li>
                                 <label>
-                                    <input type="radio" name="insomnia" />
+                                    <input type="radio" name="insomnia" value="1" />
                                     Нет
                                 </label>
                             </li>
                             <li>
                                 <label>
-                                    <input type="radio" name="insomnia" />
+                                    <input type="radio" name="insomnia" value="2" />
                                     Иногда
                                 </label>
                             </li>
                         </ul>
                     </fieldset>
-
+                    <fieldset>
+                        <legend>Чувствуете ли вы в последнее время, что вам никак не удается осуществить ваши планы?</legend>
+                        <ul>
+                            <li>
+                                <label>
+                                    <input type="radio" name="plans" value="0" />
+                                    Да
+                                </label>
+                            </li>
+                            <li>
+                                <label>
+                                    <input type="radio" name="plans" value="1" />
+                                    Нет
+                                </label>
+                            </li>
+                            <li>
+                                <label>
+                                    <input type="radio" name="plans" value="2" />
+                                    Иногда
+                                </label>
+                            </li>
+                        </ul>
+                    </fieldset>
+                    <fieldset>
+                        <legend>Какой вы видите свою жизнь через 5 лет?</legend>
+                        <ul>
+                            <li>
+                                <label>
+                                    <input type="radio" name="life" value="0" />
+                                    Брак, семья, дети, дом
+                                </label>
+                            </li>
+                            <li>
+                                <label>
+                                    <input type="radio" name="life" value="1" />
+                                    Путешествия по миру
+                                </label>
+                            </li>
+                            <li>
+                                <label>
+                                    <input type="radio" name="life" value="2" />
+                                    Успешная карьера
+                                </label>
+                            </li>
+                            <li>
+                                <label>
+                                    <input type="radio" name="life" value="3" />
+                                    Всё вместе
+                                </label>
+                            </li>
+                        </ul>
+                    </fieldset>
+                    <fieldset class="select">
+                        <div>
+                            <select>
+                                <option>Choose an option...</option>
+                                <option>Select 1</option>
+                                <option>Select 2</option>
+                            </select>
+                            <i class="select-icon"></i>
+                        </div>
+                    </fieldset>
                     <button class="next-button submit" type="button">Далее</button>
                 </form>
             </section>
@@ -121,5 +206,6 @@
     <button class="next-button">Далее</button>
     -->
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/createDates.js"></script>
 </body>
 </html>
