Create logic for date page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <i class="select-icon"></i>
                             </li>
                         </ul>
-                        <div class="zodiac-icon">
+                        <div class="zodiac">
                             <figure>
                                 <img src="./images/zodiac/" alt="" />
                                 <figcaption>Зодиак</figcaption>
@@ -206,6 +206,7 @@
     <button class="next-button">Далее</button>
     -->
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/zodiac.js"></script>
     <script src="./scripts/createDates.js"></script>
 </body>
 </html>
