Wrote function which get data from server

--- a/index.html
+++ b/index.html
@@ -65,8 +65,6 @@
                 <button class="summary-button next-button active">Звонить и слушать</button>
             </section>
         </article>
-        <div class="bg"></div>
-        <div class="information"></div>
         <article class="questions wrapper active">
             <section class="progress-block">
                 <div>
@@ -228,6 +226,14 @@
             <span>2022 @ horoscope personal</span>
         </footer>
     </main>
+    <div class="information">
+        <div>
+            <div class="information-close"></div>
+            <ul>
+            </ul>
+        </div>
+    </div>
+    <div class="bg"></div>
     <!--
     <div class="select">
         <select>
