--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <li><span>Поиск свободного оператора.......</span><span class="success">Выполнено</span></li>
                     <li><span>Начало озвучки и записи аудио сообщения.......</span></li>
                 </ul>
-                <h4 class="tape">Идеёт запись!</h4>
+                <h4 class="tape">Идёт запись!</h4>
                 <h4 class="done">Готово!</h4>
                 <button class="statistics-button next-button">Далее</button>
             </section>
