--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         </ul>
                         <div class="zodiac">
                             <figure>
-                                <img src="./images/zodiac/" alt="" />
+                                <img src="" alt="" />
                                 <figcaption>Зодиак</figcaption>
                             </figure>
                         </div>
